adicionado rotas ao sistema

--- a/src/app/book-list/book-list.component.html
+++ b/src/app/book-list/book-list.component.html
@@ -3,10 +3,12 @@
     <hr>
     <div class="itens-list">
         <div class="item-list" *ngFor="let book of books">
-            <div class="item-list-title">{{book?.title}}</div>
-            <div class="item-list-author">{{book?.author}}</div>
-            <div class="item-list-place">{{book?.place}}</div>
-            <hr>
+            <a href="/books/{{book?.key}}">
+                <div class="item-list-title">{{book?.title}}</div>
+                <div class="item-list-author">{{book?.author}}</div>
+                <div class="item-list-place">{{book?.place}}</div>
+            </a>
+            <div class="divider"></div>
         </div>
     </div>
 </div>
