--- a/src/app/button-sidebar/button-sidebar.component.html
+++ b/src/app/button-sidebar/button-sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar-button">
+<div class="sidebar-button" routerLinkActive="active">
     <div class="button-label">
         <mat-icon aria-hidden="false" aria-label="Example home icon" style="margin-right: 10px;">
             <ng-content select=".icon"></ng-content>
