--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
-<div class="sidebar">
+<div style="background-color: #FFFFFF;">
     <div class="side-bar-button-container">
         <a routerLink="/books">
-            <app-button-sidebar>
+            <app-button-sidebar >
                 <div class="icon">menu_book</div>
                 <div class="title">Livros</div>
             </app-button-sidebar>
