--- a/src/app/book-list/book-list.component.css
+++ b/src/app/book-list/book-list.component.css
@@ -26,6 +26,10 @@
     padding: 10px;
 }
 
+.item-list:hover{
+    background-color: rgb(194, 227, 255);
+}
+
 .item-list-title{
 
 }
@@ -39,4 +43,14 @@
     float: right;
     margin-top: -30px;
     margin-right: 20px;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+} 
+
+.divider{
+    margin-top: 10px;
+    border-top: solid 1px rgb(218, 218, 218);
 }
