--- a/src/app/button-sidebar/button-sidebar.component.css
+++ b/src/app/button-sidebar/button-sidebar.component.css
@@ -9,7 +9,8 @@
     margin: gray 1px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 12px;
-    color: #737373
+    color: #737373;
+    text-decoration: none;
 }
 
 .button-label:hover{
