--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,6 +1,14 @@
 <div class="main-content">
-    <app-sidebar style="border-right: solid 2px #dcdcdc;"></app-sidebar>
+    <app-sidebar style="border-right: solid 2px #dcdcdc; background-color: #ffffff;"></app-sidebar>
     <div class="content">
         <ng-content></ng-content>
     </div>
+    <button style="
+    position: fixed;
+    bottom: 2%;
+    right: 2%;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; 
+    font-weight: bold; 
+    font-size: xx-large;" 
+    mat-fab color="primary" >+</button>
 </div>
