--- a/src/app/student-list/student-list.component.css
+++ b/src/app/student-list/student-list.component.css
@@ -57,3 +57,8 @@
     margin-top: 10px;
     border-top: solid 1px rgb(218, 218, 218);
 }
+
+a {
+    color: inherit;
+    text-decoration: none;
+} 
