--- a/src/app/student-list/student-list.component.html
+++ b/src/app/student-list/student-list.component.html
@@ -3,17 +3,21 @@
     <hr>
     <div class="itens-list">
         <div class="item-list" *ngFor="let student of students">
-            <div class="item-list-name">{{student?.name}}</div>
-            <div class="item-list-educational-institution">{{student?.educationalInstitution}}</div>
-            <div class="item-list-pendencies" 
-            [ngClass]="{
-                'no-pendencies': student?.pendencies,
-                'pendencies': !student?.pendencies
-            }">
-                <mat-icon>{{student?.pendencies ? 'check_circle' : 'warning' }}</mat-icon>
-            </div>
-            <div class="divider"></div>
+            <a href="/students/{{student?.key}}">
+                <div class="item-list-name">{{student?.name}}</div>
+                <div class="item-list-educational-institution">{{student?.educationalInstitution}}</div>
+                <div class="item-list-pendencies" 
+                [ngClass]="{
+                    'no-pendencies': student?.pendencies,
+                    'pendencies': !student?.pendencies
+                }">
+                    <mat-icon>{{student?.pendencies ? 'check_circle' : 'warning' }}</mat-icon>
+                </div>
+                <div class="divider"></div>
+            </a>
         </div>
     </div>
 </div>
+
+<app-student-form></app-student-form>
     
