--- a/src/app/student-list/student-form/student-form.component.html
+++ b/src/app/student-list/student-form/student-form.component.html
@@ -1,20 +1,24 @@
 <div class="form">
     <div class="form-title">
-        <div class="form-icon-close">X</div>
-        <div class="form-title-label">Title</div>
+        <div class="form-icon-close">
+            <button mat-mini-fab color="green">
+                <mat-icon>close</mat-icon>
+            </button>
+        </div>
+        <div class="form-title-label">Registrar/Editar Aluno</div>
     </div>
     <div class="form-fields">
         <div class="example-container">
             <mat-form-field>
-                <input matInput placeholder="Input">
+                <input matInput placeholder="Nome do Aluno">
             </mat-form-field>
             
             <mat-form-field>
-                <textarea matInput placeholder="Textarea"></textarea>
+                <input matInput placeholder="Instituição de Ensino">
             </mat-form-field>
             
             <mat-form-field>
-                <mat-select placeholder="Select">
+                <mat-select placeholder="Adicionar Livro">
                     <mat-option value="option">Option 1</mat-option>
                     <mat-option value="option">Option 2</mat-option>
                     <mat-option value="option">Option 3</mat-option>
