--- a/src/app/main-content/main-content.component.css
+++ b/src/app/main-content/main-content.component.css
@@ -1,11 +1,14 @@
 .main-content{
-    height: 100%;
+    height: auto;
     display: flex;
+    overflow: hidden;
 }
 
 .content{ 
     padding: 10px;
-    width: 80%;
+    width: 100%;
+    background-color: #ffffff;
+    height: 100%;
 }
 
 .content-list{
@@ -17,5 +20,56 @@
     border-left: #cacaca 1px solid;
     border-right: #cacaca 1px solid;
     background-color: #ffffff;
+}
+
+.content-form{
+    position: fixed;
+    right: 0;
+    top: 50px;
+    background-color: #FFFFFF;
+    width: 50%;
     height: 100%;
+    box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
+}
+
+/* --------------------------------------- */
+
+.flex {
+	display: flex;
+}
+
+.flex-wrap {
+	flex-wrap: wrap;
+}
+
+.flex-item-1 {
+	flex: 1;
+}
+
+/* Flex Item */
+.item {
+	margin: 5px;
+	background: tomato;
+	text-align: center;
+	font-size: 1.5em;
+}
+
+.container {
+    max-width: 62%;
+    height: 94%;
+	margin: 0 auto;
+    border-right: 1px solid #ccc;
+    border-left: 1px solid #ccc;
+}
+
+h1 {
+	text-align: center;
+	margin: 20px 0 0 0;
+	font-size: 1.25em;
+	font-weight: normal;
+}
+
+body {
+	font-family: monospace;
+	color: #333;
 }
