--- a/src/app/student-list/student-list.component.css
+++ b/src/app/student-list/student-list.component.css
@@ -1,5 +1,6 @@
+
 .content-list{
-    padding: 20px;
+    /* padding: 20px;
     margin-left: 40px;
     margin-top: -10px;
     align-content: center;
@@ -7,7 +8,7 @@
     border-left: #cacaca 1px solid;
     border-right: #cacaca 1px solid;
     background-color: #ffffff;
-    height: 100%;
+    height: 100%; */
 }
 
 .title-list{
