--- a/src/app/book-list/book-list.component.css
+++ b/src/app/book-list/book-list.component.css
@@ -1,5 +1,5 @@
 .content-list{
-    padding: 20px;
+    /* padding: 20px;
     margin-left: 40px;
     margin-top: -10px;
     align-content: center;
@@ -7,7 +7,7 @@
     border-left: #cacaca 1px solid;
     border-right: #cacaca 1px solid;
     background-color: #ffffff;
-    height: 100%;
+    height: 100%; */
 }
 
 .title-list{
@@ -53,4 +53,15 @@ a {
 .divider{
     margin-top: 10px;
     border-top: solid 1px rgb(218, 218, 218);
+}
+
+
+.content-form{
+    position: fixed;
+    right: 0;
+    top: 50px;
+    background-color: #FFFFFF;
+    width: 50%;
+    height: 100%;
+    box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
 }
