--- a/src/app/student-list/student-list.component.css
+++ b/src/app/student-list/student-list.component.css
@@ -63,3 +63,13 @@ a {
     color: inherit;
     text-decoration: none;
 } 
+
+.content-form{
+    position: fixed;
+    right: 0;
+    top: 50px;
+    background-color: #FFFFFF;
+    width: 50%;
+    height: 100%;
+    box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
+}
