--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="top-bar">
-        <button mat-mini-fab style="margin-left: -5px; margin-right: 5px;" color="black" aria-label="menu" (click)="drawer.toggle()">
+        <button mat-button style="margin-left: -5px; margin-right: 5px; color: white;" aria-label="menu" >
             <mat-icon>menu</mat-icon>
         </button>
     <img src="https://apps1.qualiex.com/Content/images/logo_branco.png" width="96px" alt="" style="margin-left: 10px;">
