--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -2,5 +2,9 @@
         <button mat-button style="margin-left: -5px; margin-right: 5px; color: white;" aria-label="menu" (click)="togleSidenav()">
             <mat-icon>menu</mat-icon>
         </button>
-    <img src="https://apps1.qualiex.com/Content/images/logo_branco.png" width="96px" alt="" style="margin-left: 10px;">
+
+        <div style="color:white">
+            <mat-icon>bookmark_border</mat-icon>
+            Books Manager
+        </div>
 </mat-toolbar>
